syntax = "proto3";
package pb;

option go_package = "./";


message douyin_user_register_request {
    string username = 1;  //消息ID
    string password = 2;//消息内容
}
message douyin_user_register_response{
    int32  status_code=1;
    string status_msg=2;
    int64 user_id=3;
    string token=4;
}
message douyin_user_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}

message douyin_user_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
    User user = 3; // 用户信息
}

message User {
    int64 id = 1; // 用户id
    string name = 2; // 用户名称
    optional int64 follow_count = 3; // 关注总数
    optional int64 follower_count = 4; // 粉丝总数
    bool is_follow = 5; // true-已关注，false-未关注
}
message douyin_feed_request {
    optional int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
    optional string token = 2; // 可选参数，登录用户设置
}
message douyin_feed_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
    repeated Video video_list = 3; // 视频列表
    optional int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

message video_id_request{
    int64 video_id = 1 ;
    int64 search_id = 2 ;
}

message Video {
    int64 id = 1; // 视频唯一标识
    User author = 2; // 视频作者信息
    string play_url = 3; // 视频播放地址
    string cover_url = 4; // 视频封面地址
    int64 favorite_count = 5; // 视频的点赞总数
    int64 comment_count = 6; // 视频的评论总数
    bool is_favorite = 7; // true-已点赞，false-未点赞
    string title = 8; // 视频标题
}
//发布视频
message douyin_publish_action_request {
    string token = 1; // 用户鉴权token
    bytes data = 2; // 视频数据
    string title = 3; // 视频标题
}

message douyin_publish_action_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
}

message douyin_publish_list_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}

message douyin_publish_list_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
    repeated Video video_list = 3; // 用户发布的视频列表
}

//点赞
message douyin_favorite_action_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
    int64 video_id = 3; // 视频id
    int32 action_type = 4; // 1-点赞，2-取消点赞
}

message douyin_favorite_action_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
}

message douyin_favorite_list_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}

message douyin_favorite_list_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
    repeated Video video_list = 3; // 用户点赞视频列表
}
//relation
message douyin_relation_action_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
    int64 to_user_id = 3; // 对方用户id
    int32 action_type = 4; // 1-关注，2-取消关注
}

message douyin_relation_action_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
}

message douyin_relation_follow_list_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}

message douyin_relation_follow_list_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
    repeated User user_list = 3; // 用户信息列表
}

message douyin_relation_follower_list_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}

message douyin_relation_follower_list_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
    repeated User user_list = 3; // 用户列表
}
message douyin_comment_action_request {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
    int64 video_id = 3; // 视频id
    int32 action_type = 4; // 1-发布评论，2-删除评论
    optional string comment_text = 5; // 用户填写的评论内容，在action_type=1的时候使用
    optional int64 comment_id = 6; // 要删除的评论id，在action_type=2的时候使用
}

message douyin_comment_action_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
    optional Comment comment = 3; // 评论成功返回评论内容，不需要重新拉取整个列表
}

message douyin_comment_list_request {
    string token = 1; // 用户鉴权token
    int64 video_id = 2; // 视频id
}

message douyin_comment_list_response {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
    repeated Comment comment_list = 3; // 评论列表
}

message Comment {
    int64 id = 1; // 视频评论id
    User user =2; // 评论用户信息
    string content = 3; // 评论内容
    string create_date = 4; // 评论发布日期，格式 mm-dd
}
service Service{
    rpc Register(douyin_user_register_request) returns (douyin_user_register_response);
    rpc Login (douyin_user_register_request) returns (douyin_user_register_response);
    rpc GetUserById (douyin_user_request) returns (douyin_user_response);

    rpc GetUserFeed (douyin_feed_request) returns (douyin_feed_response); //返回一个视频列表
    rpc GetVideoById (video_id_request) returns (Video); // 根据视频id返回一个视频

    rpc PublishAction(douyin_publish_action_request) returns (douyin_publish_action_response); //发布视频操作
    rpc PublishList(douyin_publish_list_request) returns (douyin_publish_list_response);// 获取用户已发布视频的列表

    rpc FavoriteAction(douyin_favorite_action_request) returns (douyin_favorite_action_response); //点赞或取消点赞
    rpc FavoriteList(douyin_favorite_list_request) returns (douyin_favorite_list_response); // 返回点赞视频列表

    rpc RelationAction(douyin_relation_action_request) returns (douyin_relation_action_response); //关注或取消关注
    rpc RelationFollowList(douyin_relation_follow_list_request) returns (douyin_relation_follow_list_response); //获取已关注用户的列表
    rpc RelationFollowerList(douyin_relation_follower_list_request) returns (douyin_relation_follower_list_response); //获取粉丝用户列表

    rpc CommentAction(douyin_comment_action_request) returns (douyin_comment_action_response); //评论操作
    rpc CommentList(douyin_comment_list_request) returns (douyin_comment_list_response); //返回评论列表
}
